<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/topBarTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/editText"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/shareOrRemoveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/ic_baseline_more_vert_24" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_cc" />

    <EditText
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:text="ReactNative란" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/gray_cc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/gray_cc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_insert_comment_24" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:background="@android:color/transparent"
            android:hint="메모"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/gray_cc" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/gray_cc" />

    <LinearLayout
        android:id="@+id/reminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_notifications_none_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_weight="1"
            android:hint="@string/settingReminder"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/reminderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/material_motion_duration_long_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="24dp">

        <android.widget.Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/button_cancel"
            android:text="@string/cancelString"
            android:textColor="@color/black"
            android:visibility="invisible"
            tools:visibility="visible" />

        <android.widget.Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ok_selector"
            android:text="@string/saveString"
            android:textColor="@color/white"
            android:visibility="invisible"
            tools:visibility="visible" />
    </LinearLayout>
</LinearLayout>