<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetDashBoardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <View
        android:id="@+id/transparentView"
        android:layout_width="0dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@id/lineView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/parentView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bottom_popup_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transparentView" />

    <View
        android:id="@+id/lineView"
        android:layout_width="150dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_cc"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintStart_toStartOf="@id/parentView"
        app:layout_constraintTop_toTopOf="@id/parentView" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="64dp"
        android:background="@drawable/spinner_selector"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/linkNameLayout"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintStart_toStartOf="@id/parentView"
        app:layout_constraintTop_toBottomOf="@id/lineView" />

    <LinearLayout
        android:id="@+id/linkNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toTopOf="@id/linkLayout"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintStart_toStartOf="@id/parentView"
        app:layout_constraintTop_toBottomOf="@id/spinner">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_bookmark_border_24" />

        <EditText
            android:id="@+id/linkNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/titleText"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linkLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toTopOf="@id/descriptionLayout"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintStart_toStartOf="@id/parentView"
        app:layout_constraintTop_toBottomOf="@id/linkNameLayout">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_link_24" />

        <EditText
            android:id="@+id/linkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/linkText"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toTopOf="@id/starLayout"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintStart_toStartOf="@id/parentView"
        app:layout_constraintTop_toBottomOf="@id/linkLayout">

        <ImageView
            android:id="@+id/descriptionImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_insert_comment_24" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/memo"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/starLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
        app:layout_constraintStart_toStartOf="@id/parentView"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintBottom_toTopOf="@id/reminderLayout">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_star_border_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_weight="1"
            android:hint="@string/settingBookMark"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/starSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:track="@drawable/switch_track_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintStart_toStartOf="@id/parentView">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_notifications_none_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_weight="1"
            android:hint="@string/settingReminder"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/reminderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:track="@drawable/switch_track_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="@id/parentView"
        app:layout_constraintEnd_toEndOf="@id/parentView">

        <android.widget.Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/button_add_cancel" />

        <android.widget.Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_save"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>