<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:background="@drawable/topview_image"
        android:layout_height="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintEnd_toStartOf="@id/folderImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/folderImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_folder_open_24"
        app:layout_constraintBottom_toBottomOf="@id/pathTextView"
        app:layout_constraintEnd_toStartOf="@id/pathTextView"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/pathTextView" />

    <TextView
        android:id="@+id/pathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintStart_toEndOf="@id/folderImageView"
        app:layout_constraintTop_toTopOf="@id/backButton"
        tools:text="home" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="55dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="home" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:text="n개의 별이 담겨있어요" />

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/emptyText"
        android:textColor="@color/gray_cc"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView" />

    <LinearLayout
        android:id="@+id/sortLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView">

        <Switch
            android:id="@+id/sortTypeSwitchButton"
            android:layout_width="50dp"
            android:layout_height="36dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/sortTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/gray_cc"
            tools:text="만든 날짜 순" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/sortLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sortLayout">

        <ImageView
            android:id="@+id/searchImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_search_24" />

        <ImageView
            android:id="@+id/optionImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_more_vert_24" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folderRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:paddingBottom="24dp"
                app:layout_constraintBottom_toTopOf="@id/linkRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/linkRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/folderRecyclerView" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFolderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/addFolder"
        android:src="@drawable/ic_baseline_create_new_folder_24"
        app:layout_constraintBottom_toBottomOf="@id/fabButton"
        app:layout_constraintEnd_toEndOf="@id/fabButton"
        app:layout_constraintStart_toStartOf="@id/fabButton"
        app:layout_constraintTop_toTopOf="@id/fabButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/addLink"
        android:src="@drawable/ic_baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="@id/fabButton"
        app:layout_constraintEnd_toEndOf="@id/fabButton"
        app:layout_constraintStart_toStartOf="@id/fabButton"
        app:layout_constraintTop_toTopOf="@id/fabButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>